# Code-Exercise-Framework-Cpp

./: CMakeLists.txt  LICENSE  README.md
cmake/: files_exercises.cmake  files_framework.cmake  files_tasks.cmake
src/: main.cpp
src/Exercises/: ExerciseExample.cpp  ExerciseExample.h  ExerciseTemplate.h
src/Exercises/Leetcode/: Task2391MinimumAmountOfTimeToCollectGarbage.cpp  Task2391MinimumAmountOfTimeToCollectGarbage.h
src/Framework/: ExerciseBase.h  ExerciseDerived.h  FunctionRunner.cpp  FunctionRunner.h  Manager.h  TaskBase.h  TestHelper.cpp  TestHelper.h
src/Tasks/: TaskExample.cpp  TaskExample.h  TaskTemplate.h
src/Tasks/Leetcode/: Task2391MinimumAmountOfTimeToCollectGarbage.cpp  Task2391MinimumAmountOfTimeToCollectGarbage.h
